# sentinel1to2

./: README.md  batch_run_inference.py  data_preparation.py  evaluate_model.py  process_scenes.py  pyproject.toml  sentinel1to2.py  train_model.py
models/losses/: VGGPerceptualLoss.py
scripts/setup/: setup_python_env.sh
src/: inference.py  performance.py  prepare_input_data.py  sentinel1to2.py
src/models/: UNet.py
src/models/losses/: CombinedLoss.py  sam_loss.py
src/plotting/: scatter_with_r2.py  scatter_with_r2_by_class.py
src/sentinel1to2/: __init__.py  __main__.py  batch_run_inference.py  data_preparation.py  evaluate_model.py  inference.py  performance.py  process_scenes.py  train_model.py
src/sentinel1to2/configs/: default_config.yaml
src/sentinel1to2/models/losses/: CombinedLoss.py  VGGPerceptualLoss.py
src/sentinel1to2/plotting/: plot_r2_by_class.py  scatter_with_r2.py  scatter_with_r2_by_class.py
src/sentinel1to2/tools/: compute_diff.py  compute_hdf5_mean_std.py  compute_pixelwise_r2.py  infer_on_scene.py  load_worldcover.py  process_scene.py  r2_by_class.py  scene_split_dataset.py
src/tools/: compare_ndvi.py  compute_diff.py  compute_ndvi_from_s2.py  compute_pixelwise_r2.py  get_pred_scenes.py  get_real_scenes.py  inspect_hdf5_io_shapes.py  load_and_stack_full.py  load_image.py  pad_image.py  process_scene.py  r2_by_class.py  save_geotiff.py  save_r2_map_as_geotiff.py
tools/: compute_sam.py  infer_on_scene.py  load_predicted_ndvi.py
