[project]
name = "sentinel1to2"
version = "0.0.1"
authors = [
    {name = "Gabriel Ramirez"},
    {name = "Roberto Cilli"}
]
description = "Sentinel 1 to 2 image translator"
requires-python = ">= 3.9"
dependencies = [
    "h5py==3.15.1",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "rasterio==1.4.3",
    "scikit_learn==1.7.2",
    "segmentation_models_pytorch==0.5.0",
    "scikit-image",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1"
]
readme = "README.md"
#license = {file = "LICENSE"}

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
pyuvcgen = "sentine1to2.__main__:main"

[project.urls]
Homepage = "https://github.com/gabriel-rmrz/sentinel1to2"
